--- a/metadata.yaml
+++ b/metadata.yaml
@@ -35,6 +35,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'France -- History -- Revolution, 1789-1799 -- Personal narratives'
 - !lcc 'DC'
+- GITenberg
 title: 'Mémoires de Madame la Duchesse de Tourzel
 
   Gouvernante des enfants de France pendant les années 1789 à 1795'
